Java 21 compatiple? I think so.